# sudoku-challenge

./: .gitignore  LICENSE  README.md
cpp-qt/: .gitignore  CMakeLists.txt  README.md  build.sh  create-macos-app.sh  project_structure
cpp-qt/cmake/: macos-host.cmake  macos.cmake  windows.cmake
cpp-qt/resources/: MacOSXBundleInfo.plist.in  sudoku.icns
cpp-qt/src/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  styles.h
cpp-qt/src/core/: cell.h  gamestatemanager.cpp  gamestatemanager.h  grid.cpp  grid.h  sudoku.cpp  sudoku.h
cpp-qt/src/screens/: difficultyscreen.cpp  difficultyscreen.h  gameoverscreen.cpp  gameoverscreen.h  gamescreen.cpp  gamescreen.h  homescreen.cpp  homescreen.h  screen.cpp  screen.h
cpp-qt/src/styles/: styles.h
cpp-qt/tests/: CMakeLists.txt  sudoku_test.cpp
nextjs/: README.md  bun.lockb  package.json  tsconfig.json
nextjs/__tests__/: sudoku.test.ts
nextjs/src/app/: layout.tsx  page.tsx
nextjs/src/app/(game)/: layout.tsx
nextjs/src/app/_components/game/: DifficultySelector.tsx  GameBoard.tsx  GameContainer.tsx  GameControls.tsx  GameHeader.tsx  NumberButtons.tsx  SudokuGrid.tsx  Timer.tsx  VictoryAnimation.tsx
nextjs/src/app/_components/home/: StartButton.tsx
nextjs/src/app/_components/icons/: blog-icon.tsx  github-icon.tsx  linkedin-icon.tsx  x-icon.tsx
nextjs/src/app/difficulty/: page.tsx
nextjs/src/app/game/: page.tsx
nextjs/src/hooks/: useGameState.ts
nextjs/src/lib/: score-calculator.ts  sudoku-generator.ts
nextjs/src/types/: difficulty.ts
symfony/: README.md
